<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_margin_medium"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/m_semibold"
        android:padding="16dp"
        android:text="@string/label_filter" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RadioButton
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:id="@+id/checkboxFilterArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_semibold"
            android:padding="@dimen/app_margin_medium"
            android:text="@string/label_filter_artist" />

        <RadioButton
            style="@android:style/Widget.CompoundButton.CheckBox"
            android:id="@+id/checkboxFilterGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_semibold"
            android:padding="@dimen/app_margin_medium"
            android:text="@string/label_filter_genre" />
    </RadioGroup>


    <TableRow
        android:layout_margin="@dimen/app_margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end">

        <Button
            android:fontFamily="@font/m_semibold"
            android:id="@+id/btnDialogCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/label_cancel"
            android:textSize="12sp" />

        <Button
            android:fontFamily="@font/m_semibold"
            android:id="@+id/btnDialogSave"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/label_save"
            android:textSize="12sp" />

    </TableRow>

</LinearLayout>
