<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_background"
    android:orientation="vertical">

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="?attr/actionBarSize"-->
    <!--        android:background="@color/color_background_general">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:gravity="center_vertical"-->
    <!--            android:orientation="horizontal"-->
    <!--            android:padding="@dimen/app_margin_medium">-->

    <!--        </LinearLayout>-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/mSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.home.HomeFragment">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/app_margin_medium"
                        app:cardCornerRadius="@dimen/app_card_corner"
                        app:cardElevation="@dimen/app_card_shadow">

                        <LinearLayout
                            android:id="@+id/viewGenre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvHeaderUser"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/m_medium"
                                android:gravity="start"
                                android:text="@string/app_name"
                                android:textColor="@color/color_app_text_accent" />

                            <TextView
                                android:id="@+id/tvHeaderMessage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="@dimen/app_margin_small"
                                android:layout_marginEnd="@dimen/app_margin_small"
                                android:layout_weight="1"
                                android:fontFamily="@font/m_extrabold"
                                android:gravity="start"
                                android:text="@string/app_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textColor="@color/color_app_text_primary" />


                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerViewGenre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/viewLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/pBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:tint="@color/teal_200" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include layout="@layout/item_card_loading"></include>
                </LinearLayout>


            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/ivEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vc_empty"
                android:visibility="gone">

            </ImageView>

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/m_regular"
                android:padding="@dimen/app_margin_small"
                android:text="@string/message_hold_on" />

            <Button
                android:visibility="gone"
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_semibold"
                android:text="@string/label_retry" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>